Fixed layout issues
Switched from flexbox (not supported by Mobile Safari on iOS 6) to table
layout.

--- a/assets/expenses.css
+++ b/assets/expenses.css
@@ -1,9 +1,15 @@
 html, body, .screen { margin:0; width:100%; height:100% }
 h1, ul, li { margin:0; padding:0 }
 
-.row, .column { display:flex; display:-webkit-flex }
-.row { flex-direction:row; -webkit-flex-direction:row }
-.column { flex-direction:column; -webkit-flex-direction:column }
-.fill { flex:auto; -webkit-flex:auto }
+.screen { display:table; max-width:800px; margin:0 auto }
+.screen header, .screen main, .screen footer { display:table-row }
+.screen main { height:100% }
 
-.screen { max-width:800px; margin:0 auto }
+#categories ul { display:table; width:100% }
+#categories li { display:table-row }
+#categories span { display:table-cell }
+#categories .name {  }
+#categories .amount { text-align:right; white-space:nowrap }
+
+.left { float:left }
+.right { float:right }
